[gd_scene load_steps=5 format=3 uid="uid://b7vd3hg6exwa1"]

[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="1_stwf7"]
[ext_resource type="Script" uid="uid://wu5vq5o8rcho" path="res://scenes/gui/scr_death_screen.gd" id="2_c5eij"]
[ext_resource type="Script" uid="uid://dmjhn5qrpt7r4" path="res://code/scr_textbox.gd" id="2_pk72b"]
[ext_resource type="Texture2D" uid="uid://m2mms3pjc366" path="res://sprites/death/spr_default.png" id="3_squjp"]

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_stwf7")
script = ExtResource("2_c5eij")

[node name="Bg" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 120.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 2.0
offset_right = 80.0
offset_bottom = 13.0
scale = Vector2(2, 2)
text = "game over"
horizontal_alignment = 1

[node name="TextBox" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 70.0
offset_right = 159.0
offset_bottom = 93.0
bbcode_enabled = true
text = "jobu"
scroll_active = false
script = ExtResource("2_pk72b")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 96.0
offset_right = 128.0
offset_bottom = 120.0

[node name="RetryButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "retry"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "quit"

[node name="Pictures" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 24.0
offset_right = 120.0
offset_bottom = 64.0
texture = ExtResource("3_squjp")

[connection signal="pressed" from="HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
